force-app/main/default/objects/Campaign_Case__c/Campaign_Case__c.object-meta.xml
<CustomObject>
    <label>Campaign Case</label>
    <nameField>
        <label>Campaign Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>