force-app/main/default/objects/Campaign_Case__c/fields/Campaign_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Case_Number__c</fullName>
    <displayFormat>Campaign Case - {0000}</displayFormat>
    <label>Campaign Case Number</label>
    <type>AutoNumber</type>
</CustomField>