force-app/main/default/objects/Campaign_Case__c/fields/Campaign_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id_2__c</fullName>
    <label>Campaign Id 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>