force-app/main/default/objects/Campaign_Case__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign_Id</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Cases</relationshipLabel>
    <relationshipName>Campaign_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>