force-app/main/default/objects/Campaign_Case__c/fields/Customer_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Customer_Prospect__c</fullName>
    <label>Customer Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Positive</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Potential Negative</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Potential Qualified</fullName>
            </value>
            <value>
                <fullName>Potential Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>