force-app/main/default/objects/Campaign_Case__c/fields/New_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Description__c</fullName>
    <label>New Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>