force-app/main/default/objects/Campaign_Case__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Cases (Primary Contact)</relationshipLabel>
    <relationshipName>Campaign_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>