force-app/main/default/objects/Campaign_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Campaign_Case_Number__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Contact__c</columns>
    <columns>Customer_Prospect__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>